[package]
name = "join"
version = "0.1.0-beta.3"
authors = ["olegnn <olegnosov1@gmail.com>"]
license = "MIT"
description = """
Macros which provide useful shortcut combinators, combine sync/async chains, 
support single and multi thread (sync/async) step by step execution of branches, 
transform tuple of results in result of tuple.
"""
edition = "2018"
repository = "https://github.com/olegnn/join"
documentation = "https://docs.rs/join"
readme = "README.md"

[lib]
name = "join"

[features]
std = []
full = ["join_export/full"]

[dependencies]
proc-macro-hack = "0.5.10"
proc-macro-nested = "0.1.3"
join_export = { path = "../join_export", version = "0.1.0-beta.3" }

[dev-dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features=["async-await"] }
tokio = "0.2.0-alpha.6"
failure = "0.1.6"
futures-timer = "1.0.2"
reqwest = "0.10.0-alpha.2"
rand = "0.7.2"