[package]
name = "join"
version = "0.2.2"
authors = ["olegnn <olegnosov1@gmail.com>"]
license = "MIT"
description = """
Macros which provide useful shortcut combinators, combine sync/async chains, 
support single and multi thread (sync/async) step by step execution of branches, 
transform tuple of results in result of tuple.
"""
edition = "2018"
repository = "https://github.com/olegnn/join"
documentation = "https://docs.rs/join"
readme = "README.md"
categories = ["asynchronous", "rust-patterns", "concurrency"]

[lib]
name = "join"
proc-macro = true

[features]
full = ["join_impl/full"]

[dependencies]
join_impl = { path = "../join_impl", version = "0.2.0" }
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
futures = "0.3.0"
tokio = { version = "1.0.1", features = ["full"] }
failure = "0.1.6"
futures-timer = "0.4.0"
reqwest = "0.11.0"
rand = "0.7.2"
rayon = "1.2.1"
