[package]
name = "join_impl"
version = "0.1.0-alpha.4"
authors = ["olegnn <olegnosov1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Implementation of the `join!` macro."
repository = "https://github.com/olegnn/join"
documentation = "https://docs.rs/join_impl"
readme = "README.md"

[lib]
name = "join_impl"

[features]
std = []

[dependencies]
proc-macro2 = "1.0.3"
proc-macro-hack = "0.5.10"
quote = "1.0.2"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
join = { path = "../join", version = "0.1.0-alpha.3" }