[package]
name = "join_impl"
version = "0.3.1"
authors = ["olegnn <olegnosov1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Implementation of the `join!` macro."
repository = "https://github.com/olegnn/join"
documentation = "https://docs.rs/join_impl"
readme = "README.md"

[lib]
name = "join_impl"

[features]
full = []

[dependencies]
proc-macro2 = { version = "1.0.3", default-features = false }
quote = { version = "1.0.2", default-features = false }
syn = { version = "1.0", default-features = false, features = ["derive", "full", "extra-traits"] }
lazy_static = "1.4.0"

[dev-dependencies]
join = { path = "../join", version = "0.3.0" }

