[package]
name = "union"
version = "0.1.0-alpha.1"
authors = ["olegnn <olegnosov1@gmail.com>"]
license = "MIT"
description = "Universal combinator, useful executor."
edition = "2018"
repository = "https://github.com/olegnn/union"
documentation = "https://docs.rs/union/0.1.0-alpha.1/union"
readme = "README.md"

[lib]
name = "union"

[dependencies]
proc-macro-hack = "0.5.10"
proc-macro-nested = "0.1.3"
union_export = { path = "../union_export", version = "0.1.0-alpha.1" }

[dev-dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features=["async-await"] }
tokio = "0.2.0-alpha.5"
failure = "0.1.6"
futures-timer = "1.0.2"
reqwest = "0.10.0-alpha.1"