[package]
name = "union_impl"
version = "0.1.0-alpha.1"
authors = ["olegnn <olegnosov1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Implementation of the union! macro."
repository = "https://github.com/olegnn/union"
documentation = "https://docs.rs/union/0.1.0-alpha.1/union_impl"
readme = "README.md"

[lib]
name = "union_impl"

[features]
std = []

[dependencies]
proc-macro2 = "1.0.3"
proc-macro-hack = "0.5.10"
quote = "1.0.2"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
union = { path = "../union", version = "0.1.0-alpha.1" }
